<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".InsideActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:src="@drawable/virus"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/report"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:clickable="true"
        app:cardCornerRadius="20dp"
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="35dp"
            android:text="@string/news"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/care"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="90dp">

        </TextView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>